--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "botx-fsm"
-version = "0.1.5"
+version = "0.1.6"
 description = "FSM middleware for using with pybotx"
 authors = ["Nik Sidnev <sidnev.nick@gmail.com>"]
 
@@ -10,6 +10,7 @@ python = "^3.7"
 botx = ">=0.17.0, <0.21.0"
 aioredis = "^1.3.1"
 async_lru = "^1.0.2"
+cachetools = "^4.2.2"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
