fix: tests and linters

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,8 @@ combine_as_imports = True
 [flake8]
 max-line-length = 88
 i-control-code=False
+per-file-ignores =
+    botx_fsm/middleware.py:WPS232,WPS217,WPS231
 ignore =
     # function calls in arguments definition is part of fastapi and botx di system.
     B008,
