--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,6 +5,9 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        python-version: [3.7, 3.8, 3.9]
 
     services:
       redis:
@@ -21,7 +24,7 @@ jobs:
       - name: Setup
         uses: ExpressApp/github-actions-poetry@v0.1
         with:
-          python-version: "3.8"
+          python-version: ${{ matrix.python-version }}
           poetry-version: "1.1.6"
 
       - name: Run tests
