--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,12 @@ authors = ["Nik Sidnev <sidnev.nick@gmail.com>"]
 
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.7, <3.10"
 botx = ">=0.17.0, <0.24.0"
 aioredis = "^1.3.1"
 async_lru = "^1.0.2"
 cachetools = "^4.2.2"
+molten = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
