--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ mypy = "0.910.0"
 wemake-python-styleguide = "0.16.0"
 
 pytest = "6.2.5"
+pytest-asyncio="0.18.1"
 
 [build-system]
 requires = ["poetry>=1.1.12"]
