--- a/setup.cfg
+++ b/setup.cfg
@@ -50,3 +50,9 @@ ignore =
     WPS326,
     # Asserts are ok
     S101,
+
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    ... # noqa: WPS428
