--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ isort = "5.10.1"
 mypy = "0.910.0"
 wemake-python-styleguide = "0.16.0"
 
+pytest = "^6.2.5"
+pytest-asyncio = "0.18.1"
+
 [build-system]
 requires = ["poetry>=1.1.12"]
 build-backend = "poetry.masonry.api"
