--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,9 @@ authors = []
 
 
 [tool.poetry.dependencies]
-python = ">=3.7,<3.11"
+python = ">=3.8,<3.11"
 
-botx = { git = "https://github.com/ExpressApp/pybotx", rev = "0d301fd" }
-
+botx = "~0.30.0"
 
 [tool.poetry.dev-dependencies]
 add-trailing-comma = "2.2.1"
@@ -20,6 +19,8 @@ black = "21.12b0"
 isort = "5.10.1"
 mypy = "0.910.0"
 wemake-python-styleguide = "0.16.0"
+
+bandit = "1.7.2"  # https://github.com/PyCQA/bandit/issues/837
 
 pytest = "^6.2.5"
 pytest-asyncio = "0.18.1"
