--- a/setup.cfg
+++ b/setup.cfg
@@ -37,8 +37,8 @@ allowed-domain-names =
   params,
 
 per-file-ignores =
-    botx_fsm/__init__.py:WPS410
-    botx_fsm/state_repo_proto.py:WPS110,WPS428
+    pybotx_fsm/__init__.py:WPS410
+    pybotx_fsm/state_repo_proto.py:WPS110,WPS428
 
 ignore =
     # Docstrings
