Use pytest auto asyncio-mode

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ line_length = 88
 force_grid_wrap = 0
 combine_as_imports = True
 
+
 [flake8]
 format = wemake
 show-source = True
@@ -50,6 +51,10 @@ ignore =
     WPS326,
     # Asserts are ok
     S101,
+
+
+[tool:pytest]
+asyncio_mode=auto
 
 
 [coverage:report]
