--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,10 @@
 
 [tool.poetry]
 name = "pybotx-fsm"
-version = "0.3.0"
+version = "0.3.1"
 description = "FSM middleware for using with pybotx"
+readme = "README.md"
 authors = []
-
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
