--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 
 [tool.poetry]
 name = "pybotx-fsm"
-version = "0.3.2"
+version = "0.3.3"
 description = "FSM middleware for using with pybotx"
 readme = "README.md"
 authors = []
@@ -10,7 +10,7 @@ authors = []
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
 
-pybotx = "~0.32.0"
+pybotx = "^0.34.0"
 
 [tool.poetry.dev-dependencies]
 add-trailing-comma = "2.2.1"
