--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,24 +2,22 @@
 
 [tool.poetry]
 name = "pybotx-fsm"
-version = "0.3.6"
+version = "0.3.7"
 description = "FSM middleware for using with pybotx"
 readme = "README.md"
 authors = []
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
-pybotx = "^0.39.0"
+pybotx = ">=0.32.0,<0.40.0"
 
 [tool.poetry.dev-dependencies]
 add-trailing-comma = "2.2.1"
 autoflake = "1.4.0"
-black = "21.12b0"
+black = "22.3.0"
 isort = "5.10.1"
 mypy = "0.910.0"
-wemake-python-styleguide = "0.16.0"
-
-bandit = "1.7.2"  # https://github.com/PyCQA/bandit/issues/837
+wemake-python-styleguide = "0.16.1"
 
 pytest = "^6.2.5"
 pytest-asyncio = "0.18.1"
