Add snippets to README.md

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,9 @@ per-file-ignores =
     pybotx_fsm/__init__.py:WPS410
     pybotx_fsm/state_repo_proto.py:WPS110,WPS428
 
+    # Import ignores for README lint
+    .snippets/*:F403,F405,WPS347,WPS421,S106,WPS115
+
 ignore =
     # Docstrings
     D,
