--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,24 +2,25 @@
 
 [tool.poetry]
 name = "pybotx-fsm"
-version = "0.4.0"
+version = "0.4.1"
 description = "FSM middleware for using with pybotx"
 readme = "README.md"
 authors = []
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
-pybotx = ">=0.35.0,<0.41.0"
+
+pybotx = ">=0.35.0,<0.42.0"
 
 [tool.poetry.dev-dependencies]
 add-trailing-comma = "2.2.3"
 autoflake = "1.4.0"
 black = "22.3.0"
 isort = "5.10.1"
-mypy = "0.910.0"
+mypy = "0.950.0"
 wemake-python-styleguide = "0.16.1"
 
-pytest = "^7.0.0"
+pytest = "7.1.2"
 pytest-asyncio = "0.18.3"
 
 [build-system]
