chore: Update renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,9 +7,10 @@
   ],
   "packageRules": [
     {
+      "automerge": true,
       "matchPackageNames": ["pybotx"],
       "matchUpdateTypes": ["patch"],
-      "automerge": true
+      "rangeStrategy": "widen"
     }
   ]
 }
