ci: Automerge pybotx minor

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,9 +7,13 @@
   ],
   "packageRules": [
     {
-      "automerge": true,
       "matchPackageNames": ["pybotx"],
       "rangeStrategy": "widen"
+    },
+    {
+      "automerge": true,
+      "matchPackageNames": ["pybotx"],
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"]
     }
   ]
 }
