--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,7 +14,7 @@ jobs:
         uses: ExpressApp/github-actions-poetry@v0.2
         with:
           python-version: ${{ matrix.python-version }}
-          poetry-version: "1.1.12"
+          poetry-version: "1.3.2"
 
       - name: Run tests
         run: |
@@ -33,7 +33,7 @@ jobs:
         uses: ExpressApp/github-actions-poetry@v0.2
         with:
           python-version: ${{ matrix.python-version }}
-          poetry-version: "1.1.12"
+          poetry-version: "1.3.2"
 
       - name: Run lint
         run: |
@@ -47,6 +47,8 @@ jobs:
     steps:
       - name: Setup dependencies
         uses: ExpressApp/github-actions-poetry@v0.2
+        with:
+          poetry-version: "1.3.2"
 
       - name: Run linters
         run: |
