--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 
 [tool.poetry]
 name = "pybotx-fsm"
-version = "0.4.11"
+version = "0.4.12"
 description = "FSM middleware for using with pybotx"
 readme = "README.md"
 authors = []
@@ -10,7 +10,7 @@ authors = []
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
 
-pybotx = ">=0.44.1,<0.58.0"
+pybotx = ">=0.44.1"
 
 [tool.poetry.dev-dependencies]
 add-trailing-comma = "2.2.3"
