--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,14 +4,14 @@ jobs:
 
   test:
     name: Test
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        python-version: [ "3.8", "3.9", "3.10" ]
+        python-version: [ "3.8", "3.9", "3.10", "3.11", "3.12" ]
 
     steps:
       - name: Setup dependencies
-        uses: ExpressApp/github-actions-poetry@v0.2
+        uses: ExpressApp/github-actions-poetry@v0.4
         with:
           python-version: ${{ matrix.python-version }}
           poetry-version: "1.3.2"
@@ -23,14 +23,14 @@ jobs:
 
   lint:
     name: Lint
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        python-version: [ "3.8", "3.9", "3.10" ]
+        python-version: [ "3.8", "3.9", "3.10", "3.11", "3.12" ]
 
     steps:
       - name: Setup dependencies
-        uses: ExpressApp/github-actions-poetry@v0.2
+        uses: ExpressApp/github-actions-poetry@v0.4
         with:
           python-version: ${{ matrix.python-version }}
           poetry-version: "1.3.2"
@@ -42,11 +42,11 @@ jobs:
 
   docs-lint:
     name: Docs lint
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Setup dependencies
-        uses: ExpressApp/github-actions-poetry@v0.2
+        uses: ExpressApp/github-actions-poetry@v0.4
         with:
           poetry-version: "1.3.2"
 
