--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,6 @@
 [mypy]
 # Mypy configuration:
 # https://mypy.readthedocs.io/en/latest/config_file.html
-plugins = pydantic.mypy
 disallow_untyped_defs = True
 # strict_optional = True
 warn_redundant_casts = True
@@ -12,53 +11,9 @@ show_error_codes = True
 ignore_missing_imports = True
 
 
-[isort]
-# isort configuration:
-# https://github.com/timothycrosley/isort/wiki/isort-Settings
-include_trailing_comma = true
-multi_line_output = 3
-line_length = 88
-force_grid_wrap = 0
-combine_as_imports = True
-
-
-[flake8]
-format = wemake
-show-source = True
-statistics = False
-max-line-length = 88
-inline-quotes = double
-i-control-code = False
-
-allowed-domain-names =
-  # handler is something similar to "views" from common framework, but for bot:
-  handler,
-  # rpc params
-  params,
-
-per-file-ignores =
-    pybotx_fsm/__init__.py:WPS410
-    pybotx_fsm/state_repo_proto.py:WPS110,WPS428
-
-    # Import ignores for README lint
-    .snippets/*:F403,F405,WPS347,WPS421,S106,WPS115
-
-ignore =
-    # Docstrings
-    D,
-    # F-strings are ok
-    WPS305,
-    # Classes without base class are ok
-    WPS306,
-    # Implicit string concatenation are ok
-    WPS326,
-    # Asserts are ok
-    S101,
-    E704,
-
-
 [tool:pytest]
 asyncio_mode=auto
+asyncio_default_fixture_loop_scope=function
 
 
 [coverage:report]
