--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Setup dependencies
         uses: ExpressApp/github-actions-poetry@v0.5
         with:
+          python-version: "3.10"
           poetry-version: "2.1.3"
 
       - name: Run linters
