--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13" ]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14" ]
 
     steps:
       - name: Setup dependencies
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13" ]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"  ]
 
     steps:
       - name: Setup dependencies
@@ -48,6 +48,7 @@ jobs:
       - name: Setup dependencies
         uses: ExpressApp/github-actions-poetry@v0.5
         with:
+          python-version: "3.10"
           poetry-version: "2.1.3"
 
       - name: Run linters
